[tool.poetry]
name = "fire"
version = "0.1.0"
description = "Fire"
authors = ["Danny Willems <be.danny.willems@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
